--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
 <!-- code -->
 <script type="text/javascript">
-    const grid = new Grid();
-    const draw = new DrawChart(grid)
-    const randomInput = new RandomGenerator(grid.GRID_WIDTH, grid.GRID_HEIGHT);
     function run() {
+        const grid = new Grid();
+        const draw = new DrawChart(grid)
+        const randomInput = new RandomGenerator(grid.GRID_WIDTH, grid.GRID_HEIGHT);
         const inputData = randomInput.getRandomArray();
         const {totalWater} = draw.draw(inputData);
         // const {totalWater} = draw.draw([0,1,0,2,1,0,1,3,2,1,2,1]);
@@ -53,6 +53,7 @@
         run();
     });
 
+    run();
 
 </script>
 </body>
